resume spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1833,3 +1833,11 @@ body.is-preload #footer {
 	width: 100px;
 
 }
+
+.noMargin {
+	margin: 0 0 0 0;
+}
+
+.topPadding {
+	padding-top: 15px;
+}
